# ChangeLog for dev-perl/Plucene
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Plucene/ChangeLog,v 1.20 2006/11/24 18:12:43 mcummings Exp $

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org> Plucene-1.25.ebuild:
  sparc stable

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org> Plucene-1.25.ebuild:
  amd64 stable

*Plucene-1.25 (04 Sep 2006)

  04 Sep 2006; Yuval Yaari <yuval@gentoo.org> +Plucene-1.25.ebuild:
  Version bump

  18 Aug 2006; Michael Cummings <mcummings@gentoo.org> Plucene-1.24.ebuild:
  Marking amd64 stable

  18 Jul 2006; Michael Cummings <mcummings@gentoo.org> Plucene-1.19.ebuild,
  Plucene-1.24.ebuild:
  Forcing mb version

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> Plucene-1.24.ebuild:
  Mark 1.24 stable on ia64

  04 Jul 2006; Christian Hartmann <ian@gentoo.org> Plucene-1.19.ebuild,
  Plucene-1.24.ebuild:
  Fixed RDEPEND wrt bug #134781

  01 Jul 2006; Michael Cummings <mcummings@gentoo.org> Plucene-1.24.ebuild:
  Keywording ~amd64

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> Plucene-1.24.ebuild:
  Mark 1.24 ~ia64

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org> Plucene-1.19.ebuild,
  Plucene-1.24.ebuild:
  Virtuals for perl-core

  30 Dec 2005; <mcumming@gentoo.org> Plucene-1.19.ebuild, Plucene-1.24.ebuild:
  Scalar-List-Utils migrated to perl-core. Marking 1.24 stable x86 and sparc.

  05 Aug 2005; David Holm <dholm@gentoo.org> Plucene-1.24.ebuild:
  Added to ~ppc.

*Plucene-1.24 (05 Aug 2005)

  05 Aug 2005; Michael Cummings <mcummings@gentoo.org> +Plucene-1.24.ebuild:
  Version bump upstream

  25 May 2005; Michael Cummings <mcummings@gentoo.org> Plucene-1.19.ebuild:
  dev-perl/Test-Harness => perl-core/Test-Harness migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> Plucene-1.19.ebuild:
  dev-perl/Memoize => perl-core/Memoize migration

  17 May 2005; Gustavo Zacarias <gustavoz@gentoo.org> Plucene-1.19.ebuild:
  Stable on sparc
