@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Plucene
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Plucene/ChangeLog,v 1.20 2006/11/24 18:12:43 mcummings Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Plucene/ChangeLog,v 1.21 2007/01/19 15:27:30 mcummings Exp $
+
+  19 Jan 2007; Michael Cummings <mcummings@gentoo.org> -Plucene-1.19.ebuild,
+  Plucene-1.24.ebuild, Plucene-1.25.ebuild:
+  Ebuild maintenance
 
   24 Nov 2006; Michael Cummings <mcummings@gentoo.org> Plucene-1.25.ebuild:
   sparc stable
